added css properties

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,26 @@
 .App {
-  text-align: center;
-  background-color: #282c34;
+  background-image: url("sky.png");
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(118, 122, 119);
+  font-family: "Times New Roman", Times, serif;
+  margin: 30px;
 }
 
 .App a {
-  color: #308299;
+  display: -ms-inline-flexbox;
+
+  color: #0b5ed7;
   text-decoration: none;
+}
+.App a:hover {
+  color: rgb(118, 122, 119);
+  transition: ease-in-out;
+}
+
+.container {
+  background-image: url("sky.png");
 }
