--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   background-image: url("sky.png");
-  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,4 +22,16 @@
 
 .container {
   background-image: url("sky.png");
+}
+.App footer {
+  font-size: 18px;
+  margin: 10px 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-top: 40px;
+  text-align: center;
 }
